Fixed SASS error
- Long title names would overlap with the title poster
in the search results, so changed the margins

--- a/src/sass/components/_title-search-results.sass
+++ b/src/sass/components/_title-search-results.sass
@@ -29,11 +29,10 @@
             vertical-align: middle
 
             &.on-profile-page
-                margin-left: -3%
                 margin-right: 5%
 
             &:not(.on-profile-page)
-                margin-left: 5%
+                margin-left: 7%
 
 h4.title-search-error
     text-align: center
